Pin Node 20 + Express 4.18.2

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "commonjs",
   "scripts": {
     "build": "npm install --prefix backend && npm install --prefix frontend && npm run build --prefix frontend",
     "start": "npm run start --prefix backend"
@@ -14,9 +15,12 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "commonjs",
   "bugs": {
     "url": "https://github.com/christian-keitri/Think-Board/issues"
   },
-  "homepage": "https://github.com/christian-keitri/Think-Board#readme"
+  "homepage": "https://github.com/christian-keitri/Think-Board#readme",
+  "engines": {
+    "node": "20.x",
+    "npm": "10.x"
+  }
 }
