--- a/backend/package.json
+++ b/backend/package.json
@@ -16,7 +16,7 @@
     "@upstash/redis": "^1.34.9",
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
-    "express": "^4.18.2",
+    "express": "4.18.2",
     "mongoose": "^7.0.3"
   },
   "devDependencies": {
