--- a/backend/package.json
+++ b/backend/package.json
@@ -2,15 +2,16 @@
   "name": "backend",
   "version": "1.0.0",
   "description": "",
-  "main": "src/server.ts",
+  "main": "dist/server.js",
+  "type": "module",
   "scripts": {
-    "dev": "nodemon --watch src --ext ts,json --exec node --loader ts-node/esm server.ts",
-    "start": "node server.ts"
+    "build": "tsc",
+    "dev": "nodemon --watch src --ext ts,json --exec ts-node src/server.ts",
+    "start": "node dist/server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "module",
   "dependencies": {
     "@upstash/ratelimit": "^2.0.5",
     "@upstash/redis": "^1.34.9",
@@ -23,13 +24,13 @@
     "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.0.3",
-    "openai": "^3.3.0"
+    "openai": "^3.3.0",
+    "typescript": "^5.9.2"
   },
   "devDependencies": {
     "@types/express": "^5.0.3",
     "@types/node": "^24.3.0",
     "nodemon": "^3.1.10",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.9.2"
+    "ts-node": "^10.9.2"
   }
 }
