--- a/backend/package.json
+++ b/backend/package.json
@@ -9,9 +9,6 @@
     "dev": "nodemon --watch src --ext ts,json --exec ts-node src/server.ts",
     "start": "node dist/server.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
     "@upstash/ratelimit": "^2.0.5",
     "@upstash/redis": "^1.34.9",
@@ -25,11 +22,13 @@
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.0.3",
     "openai": "^3.3.0",
-    "typescript": "^5.9.2"
+    "morgan": "^1.10.1",
+    "typescript": "5.5.4"
   },
   "devDependencies": {
     "@types/express": "^5.0.3",
-    "@types/node": "^24.3.0",
+    "@types/node": "^20.11.30",
+    "@types/morgan": "^1.9.9",
     "nodemon": "^3.1.10",
     "ts-node": "^10.9.2"
   }
