troubleshoot ts js conflict

--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -1,19 +1,21 @@
 {
   "compilerOptions": {
-    "module": "NodeNext",
-    "moduleResolution": "NodeNext",
-    "target": "es2022",
-    "sourceMap": true,
+    "target": "ES2022",
+    "module": "CommonJS",
     "outDir": "dist",
-    "allowSyntheticDefaultImports": true,
+    "rootDir": "src",
+    "strict": true,
     "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
     "resolveJsonModule": true,
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "forceConsistentCasingInFileNames": true
   },
   "include": [
-    "src/**/*.ts",
-    "src/index.ts",
-    "server.ts",
-    "app.ts"
+    "src/**/*"
+  ],
+  "exclude": [
+    "node_modules",
+    "dist"
   ]
 }
