--- a/backend/package.json
+++ b/backend/package.json
@@ -3,7 +3,6 @@
   "version": "1.0.0",
   "description": "",
   "main": "dist/server.js",
-  "type": "module",
   "scripts": {
     "build": "tsc",
     "dev": "nodemon --watch src --ext ts,json --exec ts-node src/server.ts",
@@ -26,9 +25,13 @@
     "typescript": "5.5.4"
   },
   "devDependencies": {
+    "@types/bcrypt": "^6.0.0",
+    "@types/cookie-parser": "^1.4.9",
+    "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/morgan": "^1.9.10",
-    "@types/node": "^20.11.30",
+    "@types/node": "^20.19.11",
     "nodemon": "^3.1.10",
     "ts-node": "^10.9.2"
   }
